// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewFirstFlightForm renders successfully 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-1z10yd4-MuiFormControl-root-MuiTextField-root"
  >
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-953pxc-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
        id="new-first-flight-id-mocked"
        name="new-first-flight-id-mocked"
        placeholder="First flight (1 Sep 1999)"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`NewFirstFlightForm when disabled renders successfully 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-1z10yd4-MuiFormControl-root-MuiTextField-root"
  >
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl css-953pxc-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input Mui-disabled css-1x51dt5-MuiInputBase-input-MuiInput-input"
        disabled=""
        id="new-first-flight-id-mocked"
        name="new-first-flight-id-mocked"
        placeholder="First flight (1 Sep 1999)"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
